--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,10 +1,12 @@
 name: Build Container
 on:
-  push:
-    # Publish `master` as Docker `latest` image.
-    branches:
-      - master
-      - feature-influx2
+  release:
+    types: [created]
+  # push:
+  #   # Publish `master` as Docker `latest` image.
+  #   branches:
+  #     - master
+  #     - feature-influx2
 
     # Publish `v1.2.3` tags as releases.
     tags:
