--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - master
       - feature-influx2
+      - 'releases/**'
 
     # Publish `v1.2.3` tags as releases.
     tags:
@@ -22,7 +23,8 @@ jobs:
   # See also https://docs.docker.com/docker-hub/builds/automated-testing/
   test:
     runs-on: ubuntu-latest
-
+    permissions:
+      packages: write
     steps:
       - uses: actions/checkout@v2
 
